# adapter/outgoing/ModelReturn.go
@@ -1,5 +1,9 @@
 package outgoing
 
 type ModelReturn struct {
-	Data string `json:"data" example:""`
+	Data string `json:"userId" example:""`
+}
+
+type UserReturn struct {
+	Data string `json:"userId" example:"1234"`
 }
